# banking-mcp-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: agent_demo.py
servers/accounts/: mock_data.py  server.py
servers/compliance/: rules.py  server.py
servers/credit/: engine.py  server.py
servers/fx/: server.py
tests/: test_servers.py
